tests/errors/syntax_errors/import_star.py
# pylint: disable=missing-function-docstring, missing-module-docstring
from nargs import *

print(f())
